# SAP_DEMO

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ui  README.md  docker-compose-local.yml  docker-compose.yml  justfile  openapi.json  pyproject.toml  requirements.xml  todo.json
.claude/: CLAUDE.md
.claude/commands/: continue.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
demo/: app.py  components.py  sample_texts.py  styles.py
docs/: architecture.md
docs-site/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: intro 2.md  intro.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.js  index.module.css
infrastructure/: README.md
infrastructure/terraform/: apprunner.tf  ecr.tf  iam.tf  outputs.tf  variables.tf  versions.tf
src/pii_shield/: __init__.py
src/pii_shield/api/: __init__.py  main.py  middleware.py  models.py  routes.py
src/pii_shield/core/: __init__.py  models.py  types.py
src/pii_shield/detectors/: __init__.py  base.py  credit_card.py  email.py  german_id.py  iban.py  ip.py  llm_validator.py  phone.py  presidio.py
src/pii_shield/pipeline/: __init__.py  processor.py  report.py
src/pii_shield/preprocessing/: __init__.py  base.py  normalizer.py
src/pii_shield/strategies/: __init__.py  base.py  hashing.py  masking.py  redaction.py
tests/: __init__.py  conftest.py
tests/api/: test_routes.py
tests/detectors/: test_credit_card.py  test_email.py  test_german_id.py  test_iban.py  test_ip.py  test_llm_validator.py  test_phone.py  test_presidio.py
tests/pipeline/: test_processor.py  test_report.py
tests/preprocessing/: test_normalizer.py
tests/strategies/: test_hashing.py  test_masking.py  test_redaction.py
